[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "python-openhab"
description = "python library for accessing the openHAB REST API"
authors = [{ name = "Georges Toth", email = "georges@trypill.org" }]
license = { text = "AGPLv3+" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["openHAB"]
requires-python = ">=3.5"
dependencies = [
    "requests~=2.26",
    "python-dateutil~=2.8",
    "requests_oauthlib~=1.3",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/sim0nx/python-openhab"
Download = "https://github.com/sim0nx/python-openhab"
Tracker = "https://github.com/sim0nx/python-openhab/issues"
Documentation = "http://python-openhab.readthedocs.io/en/latest/?badge=latest"
Source = "https://github.com/sim0nx/python-openhab"

[project.optional-dependencies]
docs = [
    "mkdocs-material",
    "mkdocstrings",
]
dev = [
    "pylint",
    "mypy",
    "flake8",
    "flake8-comprehensions",
    "flake8-docstrings",
    "types-python-dateutil",
    "types-requests",
]
test = [
    "pytest",
    "coverage",
    "beautifulsoup4",
]

[tool.setuptools_scm]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = { namespaces = false }

[tool.setuptools.package-data]
openhab = ["py.typed"]

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = false
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = false
