[bdist_wheel]
universal = 0

[metadata]
name = python-openhab
description = python library for accessing the openHAB REST API
long_description = file: README.rst
author = Georges Toth
author_email = georges@trypill.org
url = https://github.com/sim0nx/python-openhab
license = AGPLv3+
download_url = https://github.com/sim0nx/python-openhab
project_urls =
    Bug Tracker = https://github.com/sim0nx/python-openhab/issues
    Documentation = http://python-openhab.readthedocs.io/en/latest/?badge=latest
    Source Code = https://github.com/sim0nx/python-openhab
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords =
    openHAB

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
python_requires = >=3.5
install_requires =
    requests~=2.23
    python-dateutil~=2.2
    aiohttp_sse_client~=0.2

[options.package_data]
openhab = py.typed


[options.extras_require]
dev =
    pylint
    mypy
    flake8
    flake8-docstrings

test =
    pytest
    coverage

[flake8]
max-line-length = 240
docstring-convention = google

ignore = D401, E111, E114
# D415, D205, D208, D403, D101, D102, D107, D105

[mypy]
show_error_context = True
show_column_numbers = True
ignore_missing_imports = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
disallow_untyped_calls = False
warn_no_return = True
warn_redundant_casts = True
warn_unused_ignores = True
strict_optional = True
check_untyped_defs = False
