[bdist_wheel]
universal = 0

[metadata]
name = python-openhab
description = python library for accessing the openHAB REST API
long_description = file: README.md
long_description_content_type = text/markdown
author = Georges Toth
author_email = georges@trypill.org
url = https://github.com/sim0nx/python-openhab
license = AGPLv3+
download_url = https://github.com/sim0nx/python-openhab
project_urls =
    Bug Tracker = https://github.com/sim0nx/python-openhab/issues
    Documentation = http://python-openhab.readthedocs.io/en/latest/?badge=latest
    Source Code = https://github.com/sim0nx/python-openhab
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords =
    openHAB

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools_scm
python_requires = >=3.5
install_requires =
    requests~=2.26
    python-dateutil~=2.8
    requests_oauthlib~=1.3

[options.package_data]
openhab = py.typed


[options.extras_require]
docs =
    mkdocs-material
    mkdocstrings
dev =
    pylint
    mypy
    flake8
    flake8-bandit
    flake8-comprehensions
    flake8-docstrings
    types-python-dateutil
    types-requests
test =
    pytest
    coverage
    beautifulsoup4


[flake8]
max-line-length = 240
docstring-convention = google

ignore = D401, E111, E114

[mypy]
show_error_context = True
show_column_numbers = True
ignore_missing_imports = True
disallow_incomplete_defs = True
disallow_untyped_defs = True
disallow_untyped_calls = False
warn_no_return = True
warn_redundant_casts = True
warn_unused_ignores = True
strict_optional = True
check_untyped_defs = False
